# fflibc

./: .clang-format  .gitignore  math.h  memory.h  meson.build  readme.md  test.c
io/: asprintf.c  aswprintf.c  fgets.c  fprintf.c  fputws.c  fscanf.c  fwprinf.c  fwscanf.c  getchar.c  gets.c  getwchar.c  io.h  meson.build  perror.c  printf.c  putchar.c  puts.c  putwchar.c  rewind.c  scanf.c  setbuf.c  snprintf.c  sprintf.c  sscanf.c  swprintf.c  swscanf.c  vasprintf.c  vaswprintf.c  vprintf.c  vscanf.c  vsprintf.c  vwprintf.c  vwscanf.c  wprinf.c  wscanf.c
io/wrap/: feof.c  fgetc.c  fgetwc.c  fputc.c  io.h  meson.build  setvbuf.c  stdstream.c  vfprintf.c  vfscanf.c  vfwprinf.c  vfwscanf.c  vsnprintf.c  vsscanf.c  vswprintf.c  vswscanf.c
math/: abs.c  div.c  fabs.c  fabsf.c  fabsl.c  imaxabs.c  imaxdiv.c  labs.c  ldiv.c  llabs.c  lldiv.c  maths.h  meson.build
math/wrap/: meson.build
memory/: atof.c  atoi.c  atol.c  atoll.c  calloc.c  memccmp.c  memccpy.c  memchr.c  memcmp.c  memcpy.c  memlchr.c  memmove.c  memory.h  mempcpy.c  memrchr.c  memset.c  meson.build  rawmemccmp.c  rawmemccpy.c  rawmemchr.c  rawmemlchr.c  reallocarray.c  stpcpy.c  stpncpy.c  strcat.c  strchr.c  strcmp.c  strcoll.c  strcpy.c  strdup.c  strlcat.c  strlcpy.c  strlen.c  strncat.c  strncmp.c  strncpy.c  strndup.c  strnlen.c  strnlen_s.c  strrchr.c  (+36 more)
memory/wrap/: free.c  memory.h  meson.build  realloc.c  strtod.c  strtol.c  strtoll.c  strxfrm.c  wcstod.c  wcstol.c  wcstoll.c  wcsxfrm.c
