if is_hosted == 1
subdir('wrap')
sources += files(
'io.h',
'printf.c',
'fprintf.c',
'snprintf.c',
'asprintf.c',
'sprintf.c',
'vprintf.c',
'vsprintf.c',
'wprinf.c',
'fwprinf.c',
'aswprintf.c',
'swprintf.c',
'vwprintf.c',
'vaswprintf.c',
'perror.c',
'setbuf.c',
'fread.c',
'fwrite.c',
'gets.c',
'fgets.c',
'getws.c',
'fgetws.c',
'getchar.c',
'getwchar.c',
'puts.c'
'fputs.c'
'putws.c'
'fputws.c'
'putchar.c',
'putwchar.c',
'scanf.c',
'vwscanf.c',
'vscanf.c',
'swscanf.c',
'sscanf.c',
'fwscanf.c',
'fscanf.c',
'wscanf.c'
)
endif
