sources += files(
'memory.h',
'memccmp.c',
'memccpy.c',
'memchr.c',
'memcmp.c',
'memcpy.c',
'memlchr.c',
'memmove.c',
'mempcpy.c',
'memrchr.c',
'memset.c',
'rawmemccmp.c',
'rawmemccpy.c',
'rawmemchr.c',
'rawmemlchr.c',
'stpcpy.c',
'stpncpy.c',
'strcat.c',
'strchr.c',
'strcmp.c',
'strcpy.c',
'strlcat.c',
'strlcpy.c',
'strlen.c',
'strncat.c',
'strncmp.c',
'strncpy.c',
'strnlen.c',
'strnlen_s.c',
'strrchr.c',
'wcscat.c',
'wcschr.c',
'wcscmp.c',
'wcscpy.c',
'wcslcat.c',
'wcslcpy.c',
'wcslen.c',
'wcsncat.c',
'wcsncmp.c',
'wcsncpy.c',
'wcsnlen.c',
'wcsnlen_s.c',
'wcspcpy.c',
'wcspncpy.c',
'wcsrchr.c',
'wmemccmp.c',
'wmemccpy.c',
'wmemchr.c',
'wmemcmp.c',
'wmemcpy.c',
'wmemlchr.c',
'wmemmove.c',
'wmempcpy.c',
'wmemrchr.c',
'wmemset.c',
'wrawmemccmp.c',
'wrawmemccpy.c',
'wrawmemchr.c',
'wrawmemlchr.c',
)

if is_hosted == 1
subdir('wrap')
sources += files(
'atof.c',
'atoi.c',
'atol.c',
'atoll.c',
'calloc.c',
'reallocarray.c',
'strcoll.c',
'strdup.c',
'strndup.c',
'wcsdup.c',
'wcscoll.c',
'wcsndup.c',
'wtof.c',
'wtoi.c',
'wtol.c',
'wtoll.c',
)
endif

